--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,18 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: 
+  #E8E8E8;
+}
+
+.stars{
+  background-color: #E8E8E8;
+  border-radius: 50px;
+  width: 2rem;
+  height: 2rem;
+}
+
 .button-welcome{
   width: 8rem;
   height: 2.4rem;
@@ -11,6 +23,10 @@
   background-color: #F22539;
   color: white;
   border: 0;
+}
+
+.button-welcome:hover{
+  background-color: #C00E20;
 }
 
 .welcome-page{
@@ -32,6 +48,10 @@
   margin-bottom: 1rem;
 }
 
+.div-no-found{
+  gap: 1rem;
+}
+
 .group {
   display: flex;
   line-height: 28px;
@@ -50,7 +70,7 @@
   border: 2px solid transparent;
   border-radius: 8px;
   outline: none;
-  background-color: #f3f3f4;
+  background-color: #fff;
   color: #0d0c22;
   transition: .3s ease;
  }
@@ -74,7 +94,6 @@
   height: 1rem;
  }
  
- 
  .spinner {
   animation: spin 2s linear infinite;
 }
@@ -84,18 +103,27 @@
   100% { transform: rotate(360deg); }
 }
 
-.container-pokemons{
-  width:26rem;
-  margin: 0.4rem;
-  background-color: #fff;
-} 
- 
-.container-pokemons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.bi-star-fill{
+  color:#BFBFBF;
+  font-size: 20px;
 }
 
+.container-pokemons {
+  width:28rem;
+  margin: 0.2rem;
+  background-color: #fff;
+  height: 2.9rem;
+  border-radius: 3px;
+} 
+
+.container-pokemons > button{
+  margin-left: 0.6rem;
+  font-size: 20px;
+}
+
+.container-pokemons > i{
+  margin-right: 0.6rem;
+}
 
 .all-button{
   width: 12.3rem;
@@ -117,7 +145,7 @@
 
 .buttons-footer{
   gap: 2rem;
-  margin-bottom: 1rem;
+  margin: 1rem;
 }
 
 .color-i-favourite {
@@ -140,7 +168,8 @@
   }
   
   .pikachu-img-welcome{
-    width: 25rem;
+    margin-top: 4rem;
+    width: 20rem;
     height: 21rem;
   }
   
@@ -175,9 +204,23 @@
   .color-p-favourite {
     font-size: 20px;
   }
-}
 
+  .div-p-welcome{
+    width: 17rem;
+  }
+
+  .welcome-page{
+    margin: 1rem;
+    gap: 1rem;
+  }
+  
+}
 
 .img-modal{
   width: 8rem;
+}
+
+.btn-name-pokemon{
+  border: none;
+  background-color: transparent;
 }
