--- a/src/style.css
+++ b/src/style.css
@@ -166,6 +166,11 @@ body{
   margin-right: 0.4rem;
 }
 
+.div-p-modal{
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+
 @media only screen and (min-width: 320px) and (max-width:520px){
   .button-welcome{
     width: 8rem;
